--- a/tabs/tabs.html
+++ b/tabs/tabs.html
@@ -1,43 +1,50 @@
-<html>
-	<head>
-<script src="myScript.js"></script>
-<link rel="stylesheet" type="text/css" href="css.css">
-	</head>
+<html> <head> <script src="myScript.js"></script> <link
+	rel="stylesheet" type="text/css" href="css.css"> </head>
 	
 	<body>
 		
-		<div id="container">
-			<div class="tabHeaders">
-				<ul id="tabs">
-					<li id="header_1">Class one</li>
-					<li id="header_2">Class two</li>
-					<li id="header_3">Class three</li>
-				</ul>
-			</div>
+		<div id="container"> <div class="tabHeaders"> <ul
+			id="tabs"> <li id="header_1">COMM 151</li> <li
+			id="header_2">CSCI 385</li> <li
+			id="header_3">CSCI 481</li> <li
+			id="header_4">CSCI 495</li> <li
+			id="header_5">IDS 402</li> </ul> </div>
 
 			<div class="tabContent">
-				<div class="tabPage" id="class_1">
-					<h3>Class Blah</h3>
-					<div>
-						<p>This is some information about my first class</p>
-					</div>
-				</div>
+			<div class="tabPage"
+				id="class_1"> <h3>Media and
+				Society</h3> <div> <p>This is some
+				information about my first class</p>
+				</div> </div>
 
 				<div class="tabPage" id="class_2">
-					<h3>Class 2 Blah</h3>
-					<div>
-						<p>This is some information about my second class</p>
-					</div>
-				</div>
+					<h3>Advanced Data Structures
+					and Algorithms</h3> <div>
+					<p>This is some information
+					about my second class</p>
+					</div> </div>
 
 				<div class="tabPage" id="class_3">
-					<h3>Class 3 Blah</h3>
-					<div>
-						<p>This is some information about my third class</p>
-					</div>
-				</div>
-			</div>
-		</div>
+					<h3>Senior Project
+					Seminar</h3> <div> <p>This is
+					some information about my
+					third class</p> </div> </div>
+
+
+					<div class="tabPage"
+					id="class_4"> <h3>CSenior
+					Project Seminar</h3> <div>
+					<p>This is some information
+					about my fourth class</p>
+					</div> </div>
+					
+					<div class="tabPage"
+					id="class_5"> <h3>Single page
+					Web apps</h3> <div>
+					<p>This is some information
+					about my fifth class</p>
+					</div> </div>
+
+					</div> </div>
 		
-	</body>
-</html>
+	</body> </html>
